# hasaki-ml-streamlit

./: .gitignore  README.md  requirements.txt  update_icon.py
app/: app.py  ml_utils.py
app/pages/: 00_Welcome.py  01_Dashboard.py  01_Overview.py  02_EDA.py  03_ML_Models.py  03_Segmentation.py  04_Sentiment.py  05_Pricing.py
app/styles/: __init__.py  components.py  main.css
crawldata/Crawl_data/hasaki_raw/: README.md  all_brands.txt  main.py  pyproject.toml  requirements.txt
crawldata/Crawl_data/website_crawl/: README.md
crawldata/Crawl_data/website_crawl/.github/workflows/: crawler.yml  weekly-listing-crawler.yml
src/: __init__.py  config.py  data_loader.py  features.py
