[project]
name = "hasaki-raw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "argcomplete==3.6.3",
    "asttokens==3.0.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.2",
    "blinker==1.9.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cramjam==2.11.0",
    "cryptography==46.0.3",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "deprecation==2.1.0",
    "dotenv==0.9.9",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "fake-useragent==1.4.0",
    "fastparquet==2024.11.0",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "fonttools==4.60.1",
    "frozendict==2.4.6",
    "fsspec==2025.10.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "ipykernel==7.0.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.9",
    "loguru==0.7.3",
    "lxml==6.0.2",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.1.7",
    "multidict==6.7.0",
    "multitasking==0.0.12",
    "nest-asyncio==1.6.0",
    "numpy==2.3.4",
    "openpyxl==3.1.5",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "patsy==1.0.1",
    "peewee==3.18.2",
    "pillow==12.0.0",
    "pipx==1.8.0",
    "platformdirs==4.5.0",
    "playwright==1.55.0",
    "postgrest==2.22.3",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.0",
    "psutil==7.1.0",
    "psycopg2-binary==2.9.11",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pycparser==2.23",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pyee==13.0.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymysql==1.1.0",
    "pyparsing==3.2.5",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "pytz==2025.2",
    "pywin32==311",
    "pyzmq==27.1.0",
    "realtime==2.22.3",
    "requests==2.31.0",
    "retrying==1.3.4",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "selenium==4.38.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "statsmodels==0.14.5",
    "storage3==2.22.3",
    "strenum==0.4.15",
    "supabase==2.22.3",
    "supabase-auth==2.22.3",
    "supabase-functions==2.22.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "trio==0.32.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "undetected-chromedriver==3.5.5",
    "urllib3==2.5.0",
    "userpath==1.9.2",
    "vadersentiment==3.3.2",
    "wcwidth==0.2.14",
    "webdriver-manager==4.0.2",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "win32-setctime==1.2.0",
    "wsproto==1.2.0",
    "xlrd==2.0.2",
    "yarl==1.22.0",
    "yfinance==0.2.66",
]
